fix playarea padding overflow

--- a/src/components/style/PlayArea.css
+++ b/src/components/style/PlayArea.css
@@ -1,6 +1,7 @@
 #play-images {
     background-color:wheat;
     padding: 1rem;
+    box-sizing: border-box;
     width: 100%;
     display: flex;
     flex-wrap: wrap;
